--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.64.1",
+    "firebase": "^11.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "prop-types": "^15.8.1",
