--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,14 @@
 FRONTEND_URL=http://localhost:5173
-DB_HOST=localhost
+DB_HOST=database
 #DB_USER=root
 DB_USER=root
 DB_PASSWORD=admin
 DB_NAME=citizen_reporter
 DB_PORT=3306
 JWT_SECRET=tu_secreto_seguro
+
 PORT=3000
+HTTPS_PORT=443
+HTTPS_REDIRECT=false
+KEY_SSL_PATH=./certs/key.pem
+CERT_SSL_PATH=./certs/cert.pem
