--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -1,9 +1,9 @@
 {
-    "development": {
-      "username": "root",
-      "password": "admin",
-      "database": "citizen_reporter",
-      "host": "127.0.0.1",
-      "dialect": "mysql"
-    }
+  "development": {
+    "username": "root",
+    "password": "admin",
+    "database": "citizen_reporter",
+    "host": "database",
+    "dialect": "mysql"
   }
+}
