Solucion del Bakcend

--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -3,7 +3,7 @@
     "username": "root",
     "password": "admin",
     "database": "citizen_reporter",
-    "host": "database",
+    "host": "localhost",
     "dialect": "mysql"
   }
 }
